feat: add new LocalResourceRepository
Add a new LocalResourceRepository to load both resources and values
files from local file system. Resource repositories can be configured
at application level.

Changes:
- add --values-file-name CLI args
- update --values-files CLI arg to support directories

Related-to: #535